--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html, body{
 	width: 100vw;
 	height: 100vh;
+	overflow-x: hidden;
 }
 body{
 	background-color: black;
@@ -89,8 +90,7 @@ body{
 .ball1{
 	left: 70px;
 	animation-name: circle-left;
-  	animation-duration: 1s;
-  	animation-delay: 1s;
+  	animation-duration: 0.5s;
   	animation-timing-function: ease;
 	animation-iteration-count: infinite;
 	animation-direction: alternate-reverse;
@@ -113,8 +113,8 @@ body{
 .ball7{
 	left: 316px;
 	animation-name: circle-right;
-  	animation-duration: 1s;
-  	animation-delay: 2s;
+  	animation-duration: 0.5s;
+  	animation-delay: 0.5s;
   	animation-timing-function: ease;
 	animation-iteration-count: infinite;
 	animation-direction: alternate-reverse;
